<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailsActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <GridLayout
        android:id="@+id/info_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6">

        <!-- address -->
        <TextView
            android:id="@+id/address_tag"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:text="@string/address_tag"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:layout_row="0"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp" />

        <!--phone-->
        <TextView
            android:id="@+id/phone_tag"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="15dp"
            android:layout_row="1"
            android:text="@string/phone_tag"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:layout_marginTop="15dp"
            android:paddingRight="20dp"
            android:layout_row="1"
            android:autoLink="phone" />
        <!--price level-->
        <TextView
            android:id="@+id/price_level_tag"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="15dp"
            android:layout_row="2"
            android:text="@string/price_level_tag"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_level"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:layout_marginTop="15dp"
            android:paddingRight="20dp"
            android:layout_row="2"/>

        <!--Rating-->
        <TextView
            android:id="@+id/rating_tag"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="15dp"
            android:layout_row="3"
            android:text="@string/rating_tag"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:layout_gravity="left"
            android:layout_marginTop="15dp"
            android:layout_row="3"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"/>

        <!--Google Page-->
        <TextView
            android:id="@+id/google_page_tag"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="15dp"
            android:layout_row="4"
            android:text="@string/google_page_tag"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/google_page"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:layout_marginTop="15dp"
            android:paddingRight="20dp"
            android:layout_row="4"
            android:autoLink="web"/>

        <!--website-->
        <TextView
            android:id="@+id/website_tag"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="15dp"
            android:layout_row="5"
            android:text="@string/website_tag"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/website"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:layout_marginTop="15dp"
            android:paddingRight="20dp"
            android:layout_row="5"
            android:autoLink="web" />

    </GridLayout>

    <TextView
        android:id="@+id/no_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:text="@string/no_info"
        android:visibility="gone" />


</FrameLayout>
